--- a/style.css
+++ b/style.css
@@ -8,4 +8,66 @@ body {
   max-width: 100%;
   min-height: 100dvh;
   font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+  background-color: #EC9743;
+  color: #000000;
+}
+
+main.container {
+  width: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+  padding: 4rem;
+}
+
+div.info {
+  text-align: center;
+
+  & h1 {
+    letter-spacing: 2px;
+  }
+
+  & span {
+    font-weight: 800;
+  }
+}
+
+section.player-container {
+  margin-top: 2rem;
+}
+
+div.track-info {
+  width: 540px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+
+  & div.img-container {
+    border-radius: 8px;
+    width: 320px;
+    height: fit-content;
+    text-align: center;
+
+    & img {
+      width: 100%;
+      border-radius: 8px;
+    }
+
+  }
+}
+
+div.controls {
+  margin-top: 2rem;
+
+  & button {
+    margin: 0 .4rem;
+    padding: .5rem;
+    outline: none;
+    border: none;
+    border-radius: 100%;
+    cursor: pointer;
+  }
+
 }
